# gosub-engine

./: Cargo.toml  README.md  table1.html  ycombinator.html
.github/workflows/: bench.yaml.disabled  bencher.yaml  bencher_baseline.yaml  ci.yaml  docs.yaml.disabled
benches/: bytestream.rs  tree_iterator.rs
crates/: errors.txt  test-gosub_html5.txt  test-gosub_render_utils.txt  test-gosub_svg.txt
crates/gosub_bindings/src/: lib.rs
crates/gosub_bindings/src/wrapper/: node.rs  text.rs
crates/gosub_cairo/: Cargo.toml
crates/gosub_cairo/src/: elements.rs  font_manager.rs  lib.rs  scene.rs
crates/gosub_cairo/src/debug/: text.rs
crates/gosub_cairo/src/elements/: brush.rs  gradient.rs  text.rs
crates/gosub_config/: Cargo.toml
crates/gosub_css3/: Cargo.toml
crates/gosub_css3/src/: ast.rs  errors.rs  lib.rs  logging.rs  matcher.rs  node.rs  parser.rs  stylesheet.rs  system.rs  tokenizer.rs
crates/gosub_css3/src/functions/: var.rs
crates/gosub_css3/src/matcher/: property_definitions.rs  shorthands.rs  styling.rs  syntax.rs  syntax_matcher.rs  walker.rs
crates/gosub_css3/src/parser/: anplusb.rs  at_rule.rs  block.rs  calc.rs  combinator.rs  condition.rs  declaration.rs  feature_function.rs  function.rs  operator.rs  pseudo.rs  rule.rs  selector.rs  selector_list.rs  stylesheet.rs  url.rs  value.rs
crates/gosub_engine/: Cargo.toml
crates/gosub_engine/src/engine/: context.rs
crates/gosub_engine/src/html/: parser.rs
crates/gosub_fontmanager/: Cargo.toml
crates/gosub_html5/: Cargo.toml
crates/gosub_html5/benches/: tree_construction.rs
crates/gosub_html5/src/: doc.rs  document.rs  errors.rs  lib.rs  node.rs  parser.rs  tokenizer.rs  writer.rs
crates/gosub_html5/src/doc/: builder.rs  document.rs  fragment.rs  query.rs  task_queue.rs
crates/gosub_html5/src/document/: builder.rs  document.rs  document_impl.rs  fragment.rs  task_queue.rs
crates/gosub_html5/src/node/: arena.rs  node.rs  node_impl.rs  nodeimpl.rs  (+1 more)
crates/gosub_instance/: Cargo.toml
crates/gosub_instance/src/: lib.rs
crates/gosub_interface/: Cargo.toml
crates/gosub_interface/src/: config.rs  css3.rs  document.rs  draw.rs  font.rs  font_system.rs  html5.rs  layout.rs  lib.rs  node.rs  render_backend.rs
crates/gosub_interface/src/config/: document.rs  render_pipeline.rs
crates/gosub_interface/src/render/: backend.rs  render_list.rs
crates/gosub_net/: Cargo.toml
crates/gosub_net/src/: decision.rs  decision_hub.rs  emitter.rs  events.rs  fetch.rs  fetcher.rs  fs_utils.rs  io_runtime.rs  lib.rs  pump.rs  req_ref_tracker.rs  router.rs  shared_body.rs  types.rs  utils.rs
crates/gosub_net/src/decision/: sniff.rs  types.rs
crates/gosub_net/src/emitter/: engine_event_emitter.rs  null_emitter.rs
crates/gosub_net/src/http/: fetcher.rs
crates/gosub_pipeline/: Cargo.toml
crates/gosub_render_backend/: Cargo.toml
crates/gosub_render_backend/src/: layout.rs  lib.rs  render_tree.rs  svg.rs
crates/gosub_render_pipeline/: Cargo.toml
crates/gosub_render_pipeline/examples/: pipeline_bench.rs
crates/gosub_render_pipeline/src/: common.rs  layouter.rs  lib.rs  painter.rs  rasterizer.rs  skia_pipeline.rs  tiler.rs
crates/gosub_render_utils/: Cargo.toml
crates/gosub_render_utils/src/: lib.rs  macos_render_tree.rs  position.rs  render_tree.rs
crates/gosub_renderer/: Cargo.toml
crates/gosub_renderer/src/: draw.rs  font.rs  lib.rs  render_table.rs  render_tree.rs
crates/gosub_renderer_dynamic/src/: lib.rs
crates/gosub_renderer_tui/: Cargo.toml
crates/gosub_renderer_tui/src/: backend.rs  cell.rs  font.rs  lib.rs  rasterizer.rs
crates/gosub_renderer_vello/src/: backend.rs  gpu_tiles.rs
crates/gosub_rendering/: Cargo.toml
crates/gosub_rendering/src/: render_tree.rs
crates/gosub_shared/: Cargo.toml
crates/gosub_shared/src/: byte_stream.rs  document.rs  engine.rs  errors.rs  lib.rs  node.rs  traits.rs
crates/gosub_styling/: Cargo.toml
crates/gosub_styling/src/: css_definitions.rs  lib.rs  render_tree.rs  syntax_matcher.rs
crates/gosub_svg/: Cargo.toml
crates/gosub_svg/src/: lib.rs  resvg.rs
crates/gosub_taffy/: Cargo.toml
crates/gosub_taffy/src/: lib.rs  text.rs
crates/gosub_useragent/: Cargo.toml
crates/gosub_useragent/src/: application.rs  event_loop.rs  tabs.rs  window.rs
crates/gosub_v8/: Cargo.toml
crates/gosub_vello/: Cargo.toml
crates/gosub_vello/src/: image.rs  lib.rs  render.rs  text.rs  transform.rs  vello_svg.rs
crates/gosub_web_platform/: Cargo.toml
crates/gosub_webinterop/: Cargo.toml
docs/: crates.md  tutorial.md
docs/render-pipeline/: gpu-render-flow.md
examples/: html5-parser.rs  tui-browser.rs
examples/browser/: Cargo.toml
examples/browser/src/: lib.rs
examples/browser/src/common/: engine.rs  logging.rs  mod.rs  nav.rs  pixels.rs  rt.rs  wgpu_ctx.rs
examples/browser/src/shell/: mod.rs
examples/browser/src/shell/egui/: cpu.rs  mod.rs  vello.rs
examples/browser/src/shell/gtk4/: cpu.rs  mod.rs  skia_gpu.rs
examples/browser/src/shell/winit/: cairo.rs  mod.rs  skia.rs  skia_gpu.rs  vello.rs
examples/gtk-renderer/: main.rs
examples/gtk4-cairo/: Cargo.toml  main.rs
examples/gtk4-skia/: main.rs
examples/html5-parser/: main.rs
examples/nautical-browser/: Cargo.toml  main.rs
examples/vello-renderer/: application.rs  main.rs  tabs.rs
examples/winit-skia-gpu/: Cargo.toml
examples/winit-skia-gpu-metal/: Cargo.toml  main.rs
examples/winit-vello/: main.rs
ffi/: Cargo.toml  LICENSE  Makefile  README.md  cbindgen.toml  gosub.h  rustfmt.toml
ffi/c_example/: gosub_c_example  main.c
ffi/docs/: code-conventions.md  pump.md
ffi/examples/: hello_world.rs  multi_tab.rs
ffi/examples/egui_vello/: compositor.rs  main.rs  tiling.rs  wgpu_context_provider.rs
ffi/examples/gtk_cairo/: main.rs
ffi/python_example/: main.py
ffi/src/: engine.rs  html.rs  lib.rs  net.rs  render.rs  util.rs
ffi/src/html/: parser.rs
ffi/src/render/: backend.rs  backends.rs  compositor.rs  compositor_router.rs  render_list.rs  viewport.rs
src/: engine.rs  prelude.rs
src/wasm/: css.rs  html.rs  renderer.rs  styles.rs
(+87 files in other folders)
