[package]
name = "gosub_engine"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
authors = ["Gosub Community <info@gosub.io>"]
description = "Gosub Browser Engine"
license = "MIT"
repository = "https://github.com/gosub-io/gosub-engine"
readme = "README.md"
keywords = ["html5", "parser", "browser", "Rust", "DOM"]

[workspace]
members = [
    "crates/*"
]

[[example]]
name = "html5-parser"
path = "examples/html5-parser/main.rs"

[[example]]
name = "cairo-renderer"
path = "examples/cairo-renderer/main.rs"
required-features = ["gtk", "gosub_render_pipeline/text_pango", "gosub_render_pipeline/backend_cairo"]

[[example]]
name = "vello-renderer"
path = "examples/vello-renderer/main.rs"
required-features = ["gosub_render_pipeline/backend_vello"]

[[example]]
name = "skia-renderer"
path = "examples/skia-renderer/main.rs"
required-features = ["gosub_render_pipeline/text_skia", "gosub_render_pipeline/backend_skia"]

[[bench]]
name = "tree_iterator"
harness = false

[[bench]]
name = "bytestream"
harness = false

[dependencies]
gosub_interface = { version = "0.1.1", path = "./crates/gosub_interface", features = [], registry = "gosub" }
gosub_shared = { version = "0.1.1", path = "./crates/gosub_shared", features = [], registry = "gosub" }
gosub_config = { version = "0.1.1", path = "./crates/gosub_config", features = [], registry = "gosub" }
gosub_html5 = { version = "0.1.1", path = "./crates/gosub_html5", features = [], registry = "gosub" }
gosub_css3 = { version = "0.1.1", path = "./crates/gosub_css3", features = [], registry = "gosub" }
gosub_render_pipeline = { version = "0.1.0", path = "./crates/gosub_render_pipeline", registry = "gosub" }
gosub_net = { version = "0.1.1", path = "./crates/gosub_net", features = [], registry = "gosub" }
gosub_instance = { version = "0.1.0", path = "./crates/gosub_instance", features = [], registry = "gosub" }
gosub_fontmanager = { version = "0.1.0", path = "./crates/gosub_fontmanager", registry = "gosub" }
# Dependencies are needed for gosub_engine itself, and some of the binaries in src/bin.
cookie = { version = "0.18.1", features = ["secure", "private"] }
url = "2.5.4"
clap = { version = "4.5.34", features = ["derive"] }
anyhow = "1.0.94"
derive_more = "2.0.1"
simple_logger = "5.0.0"
log = "0.4.22"
walkdir = "2.5.0"
gtk4 = { version = "0.9.6", optional = true }
#winit = { version = "0.30.8", optional = true }

# Dependencies for testing and development. Also used for some of the examples (like the gtk/vello renderer).
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
cookie = { version = "0.18.1", features = ["secure", "private"] }
url = "2.5.4"
clap = { version = "4.5.34", features = ["derive"] }
simple_logger = "5.0.0"
log = "0.4.22"
anyhow = "1.0.94"
image = "0.25.6"
slotmap = "1.0.7"

[features]
# Enables extended debugging information during parsing.
debug_parser = []
debug_parser_verbose = []

gtk = ["dep:gtk4"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.72"
js-sys = "0.3.70"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.47"
getrandom = { version = "0.2.15", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gosub_v8 = { version = "0.1.1", path = "./crates/gosub_v8", features = [], registry = "gosub" }
gosub_webexecutor = { version = "0.1.1", path = "./crates/gosub_webexecutor", features = [], registry = "gosub" }
ureq = "3.0.10"
futures = "0.3.31"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
#rustflags = ["-C", "target-cpu=native"] # Currently unstable and it can cause problems on older CPUs (don't have newer CPU instructions).

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
