[package]
name = "gosub_interface"
version = "0.1.2"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
description = "Gosub engine interface"
license = "MIT"

[dependencies]
gosub_net = { version = "0.1.1", path = "../gosub_net", registry = "gosub" }
url = "2.5.4"
smallvec = "1.15.0"
raw-window-handle = "0.6.2"
image = "0.25.6"
chardet = "0.2.4"
thiserror = "2.0.11"
anyhow = "1.0.98"
lazy_static = "1.5.0"
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.1"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
derive_more = {version = "2.0.1", features = ["display"]}
log = "0.4.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.70"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.72", features = ["Performance", "Window", "Worker", "WorkerOptions", "WorkerType"] }
wasm-bindgen-futures = "0.4.47"
wasm-bindgen = "0.2.93"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.31"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
