[package]
name = "gosub_net"
version = "0.1.1"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
license = "MIT"
description = "Network utitilies"

[dependencies]
gosub_shared = { version = "0.1.1", registry = "gosub", path = "../gosub_shared", features = [] }
gosub_config = { version = "0.1.1", registry = "gosub", path = "../gosub_config", features = [] }
derive_more = { version = "2", features = ["from", "display"] }
thiserror = "2.0.11"
anyhow = "1.0.98"
log = "0.4.27"
domain-lookup-tree = "0.1"
cookie = { version = "0.18.1", features = ["secure", "private"] }
url = "2.5.4"
mime = "0.3.17"
mimetype-detector = "0.3.4"
http = "1.2.0"
tracing = "0.1.41"
bytes = "1.10.1"
futures-util = "0.3.31"
tokio = { version = "1.45.0", features = ["fs"] }
tokio-util = { version = "0.7.18", features = ["io"] }
dashmap = "7.0.0-rc2"
tempfile = "3.24.0"
tokio-stream = "0.1.18"
futures-core = "0.3.31"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hickory-resolver = "0.24.4"
ureq = "3.0.11"


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.72", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4.47"
