[package]
name = "gosub_renderer_tui"
version = "0.1.0"
edition = "2021"
description = "Text-mode (character cell) render backend for the Gosub render pipeline"
license = "MIT"

[dependencies]
gosub_render_pipeline = { version = "0.1.0", path = "../gosub_render_pipeline" }
gosub_interface = { version = "0.1.1", path = "../gosub_interface", registry = "gosub" }
anyhow = { workspace = true }
parking_lot = { workspace = true }
unicode-width = { workspace = true }

[lints]
workspace = true
